data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_850.wast
;; 1. **Unreachable Code Beyond Loop**:    - **Description**: Create a test where a `loop` instruction is followed by additional unreachable instructions. Ensure that a `br` instruction within the loop correctly targets the end of the loop, making the subsequent instructions unreachable.     - **Constraint Checked**: Correct handling of the implicit label and proper termination of the loop to avoid invalid CFG where the extra instructions should not be executed.    - **CFG Relevance**: Confirms that unreachable sections are correctly identified and starts a new path in the CFG beyond the loop block.

(assert_invalid
  (module
    (func $unreachable_beyond_loop
      (loop (br 0) (i32.const 1) (i32.add))
    )
  )
  "type mismatch"
)